--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^3.8.0",
+    "classnames": "^2.3.1",
+    "google-charts": "^2.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.10",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
